20100730  Fri Jul 30 12:54:20 PDT 2010
    New Features
    * Added func() to handle functions.

    Incompatible Changes
    * Data::Alias is now optional.  This is because it does not work in 5.12
      and there's no fix in sight.  If you want to use aliasing in your
      distribution it will have to depend on Data::Alias itself.

    Docs
    * Updated the SEE ALSO
    * Removed the assertion that no checks are done on the signature    


20090620  Sat Jun 20 01:26:59 PDT 2009
    Performance
    * Load PPI on demand to reduce load time (needed by perl5i)

    Other
    * Separated signature translation between methods and subroutines
      (needed by perl5i)


20081028  Tue Oct 28 00:45:48 PDT 2008
    New Features
    * Two or more slurpy parameters (ie. @foo or %bar) in a signature is
      an error.

    Bug Fixes
    * The debugger now works, thanks to an upgrade in Devel::Declare.
    * methods are now declared at compile time, like regular subs.

    Other
    * Added some simple example files.


20081021.1911  Tue Oct 21 19:11:47 PDT 2008
    Test Fixes
    * Used a new feature of Test::Builder, upgrade dependency.


20081021  Tue Oct 21 01:43:24 PDT 2008
    New Features
    * Checks for unspecified arguments
    * Almost anything can be used as a default.

    Bug Fixes
    * A default value with a comma in it is properly parsed.
    * Default values can now be any literal, even wacky things like q,Hi!,
    * The closing paren of a signature can now be on its own line.
    * The closing paren and the opening block can be on the same line.

    New Docs
    * Documented differences from Perl 6


20081008  Wed Oct  8 09:48:33 EDT 2008
    New Features
    * Named parameters have some basic compile-time error checks for illegal signatures.

    New Docs
    * Document restritions on named parameters.


20081007  Tue Oct  7 23:27:19 EDT 2008
    New Features
    * Added named parameters.

    Docs